--- a/config/zones/CO.yaml
+++ b/config/zones/CO.yaml
@@ -3,6 +3,110 @@ bounding_box:
     - -4.735816373474336
   - - -66.37606876068756
     - 12.964920287149383
+capacity:
+  biomass:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 310.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 320.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 330.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 350.0
+  coal:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 1370.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 1650.0
+  gas:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 3290.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 3380.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 3480.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 3530.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 3740.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 4310.0
+  hydro:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 11730.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 11840.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 11930.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 11950.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 12550.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 13210.0
+  oil:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 1830.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 1920.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 1510.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 1390.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 1370.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 1450.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 1480.0
+  solar:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 10.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 30.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 80.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 180.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 480.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 680.0
+  wind:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 20.0
 contributors:
   - lav-julien
   - alixunderplatz
