--- a/config/zones/CY.yaml
+++ b/config/zones/CY.yaml
@@ -3,6 +3,44 @@ bounding_box:
     - 34.5718694118
   - - 34.0048808123
     - 35.1731247015
+capacity:
+  biomass:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 10.0
+  oil:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 1850.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 1790.0
+  solar:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 110.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 120.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 150.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 230.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 310.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 420.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 610.0
+  wind:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 160.0
 contributors:
   - ultibo
   - veqtrus
