--- a/config/zones/DO.yaml
+++ b/config/zones/DO.yaml
@@ -3,6 +3,98 @@ bounding_box:
     - 17.598564358
   - - -68.3179432848
     - 19.8849105901
+capacity:
+  biomass:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 80.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 90.0
+  coal:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 310.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 690.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 1060.0
+  gas:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 900.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 950.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 1480.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 1630.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 1800.0
+  hydro:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 610.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 620.0
+  solar:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 90.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 190.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 330.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 380.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 580.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 730.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 1070.0
+  unknown:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 1810.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 1980.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 1850.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 1750.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 1740.0
+  wind:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 140.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 180.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 370.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 420.0
 contributors:
   - systemcatch
   - nessie2013
