--- a/config/zones/GN.yaml
+++ b/config/zones/GN.yaml
@@ -1,3 +1,43 @@
+capacity:
+  hydro:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 370.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 360.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 590.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 810.0
+  solar:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 10.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 20.0
+  unknown:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 240.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 250.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 230.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 380.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 430.0
 country: GN
 parsers:
   productionCapacity: EMBER.fetch_production_capacity
