--- a/config/zones/GW.yaml
+++ b/config/zones/GW.yaml
@@ -1,3 +1,12 @@
+capacity:
+  solar:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+  unknown:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 30.0
 country: GW
 parsers:
   productionCapacity: EMBER.fetch_production_capacity
