--- a/config/zones/IE.yaml
+++ b/config/zones/IE.yaml
@@ -3,6 +3,81 @@ bounding_box:
     - 51.6693012559
   - - -6.03298539878
     - 55.1316222195
+capacity:
+  biomass:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 60.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 70.0
+  coal:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 920.0
+  gas:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 4380.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 4270.0
+  hydro:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 240.0
+  oil:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 830.0
+  solar:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 30.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 50.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 100.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 150.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 230.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 290.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 740.0
+  unknown:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 40.0
+  wind:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 3320.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 3670.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 4130.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 4310.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 4340.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 4540.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 4810.0
 contributors:
   - corradio
   - nessie2013
