--- a/config/zones/LC.yaml
+++ b/config/zones/LC.yaml
@@ -1,3 +1,16 @@
+capacity:
+  biomass:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+  solar:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+  unknown:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 90.0
 country: LC
 parsers:
   productionCapacity: EMBER.fetch_production_capacity
