--- a/config/zones/NZ.yaml
+++ b/config/zones/NZ.yaml
@@ -3,6 +3,83 @@ bounding_box:
     - -47.638394
   - - 178.798828
     - -34.168835
+capacity:
+  biomass:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 150.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 140.0
+  coal:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 500.0
+  gas:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 1820.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 1920.0
+  geothermal:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 990.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 1010.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 1040.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 1050.0
+  hydro:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 5430.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 5440.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 5680.0
+  solar:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 70.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 90.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 120.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 140.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 190.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 270.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 370.0
+  wind:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 690.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 910.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 990.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 1060.0
 contributors:
   - BobGrun
   - corradio
