--- a/config/zones/QA.yaml
+++ b/config/zones/QA.yaml
@@ -4,6 +4,29 @@ bounding_box:
     - 24.059871521000062
   - - 52.11654707100007
     - 26.660101630000042
+capacity:
+  biomass:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+  gas:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 11320.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 12580.0
+  solar:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 10.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 810.0
+  unknown:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 10.0
 contributors:
   - q--
   - nessie2013
