--- a/config/zones/SG.yaml
+++ b/config/zones/SG.yaml
@@ -3,6 +3,59 @@ bounding_box:
     - 0.7643089860000885
   - - 104.50342858200003
     - 1.9486351580000445
+capacity:
+  biomass:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 40.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 50.0
+  coal:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 220.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 210.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 180.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 250.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 510.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 230.0
+  gas:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 10850.0
+  solar:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 120.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 160.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 270.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 330.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 490.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 630.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 770.0
 contributors:
   - corradio
   - jarek
