--- a/config/zones/TW.yaml
+++ b/config/zones/TW.yaml
@@ -3,6 +3,135 @@ bounding_box:
     - 21.9705713974
   - - 121.951243931
     - 25.2954588893
+capacity:
+  biomass:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 80.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 90.0
+  coal:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 16790.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 18440.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 19240.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 19210.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 19160.0
+  gas:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 14770.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 16260.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 17150.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 18040.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 18550.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 17510.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 18810.0
+  hydro:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 2090.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 2100.0
+  nuclear:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 5140.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 4510.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 3870.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 2890.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 1900.0
+  oil:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 3340.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 3400.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 3390.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 2410.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 2420.0
+  solar:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 1770.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 2740.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 4150.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 5820.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 7700.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 9720.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 12420.0
+  wind:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 690.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 710.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 850.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 940.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 1030.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 1580.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 2670.0
 contributors:
   - corradio
   - MariusKroon
