--- a/config/zones/PE.yaml
+++ b/config/zones/PE.yaml
@@ -14,6 +14,9 @@ capacity:
     - datetime: '2021-01-01'
       source: Ember, Yearly electricity data
       value: 190.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 200.0
   coal:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
