--- a/config/zones/BO.yaml
+++ b/config/zones/BO.yaml
@@ -66,9 +66,15 @@ capacity:
     - datetime: '2018-01-01'
       source: Ember, Yearly electricity data
       value: 150.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 140.0
     - datetime: '2020-01-01'
       source: Ember, Yearly electricity data
       value: 160.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 140.0
     - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
       value: 130.0
