--- a/config/zones/CH.yaml
+++ b/config/zones/CH.yaml
@@ -15,6 +15,9 @@ capacity:
     - datetime: '2018-01-01'
       source: Ember, Yearly electricity data
       value: 220.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 230.0
   hydro:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
@@ -73,6 +76,9 @@ capacity:
     - datetime: '2018-01-01'
       source: Ember, Yearly electricity data
       value: 680.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 690.0
     - datetime: '2020-01-01'
       source: Ember, Yearly electricity data
       value: 700.0
