--- a/config/zones/CR.yaml
+++ b/config/zones/CR.yaml
@@ -31,9 +31,18 @@ capacity:
     - datetime: '2019-01-01'
       source: Ember, Yearly electricity data
       value: 2340.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 2330.0
     - datetime: '2021-01-01'
       source: Ember, Yearly electricity data
       value: 2380.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 2330.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 2370.0
   oil:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
@@ -73,6 +82,9 @@ capacity:
     - datetime: '2020-01-01'
       source: Ember, Yearly electricity data
       value: 390.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 410.0
 contributors:
   - corradio
   - jarek
