--- a/config/zones/CV.yaml
+++ b/config/zones/CV.yaml
@@ -13,6 +13,9 @@ capacity:
     - datetime: '2019-01-01'
       source: Ember, Yearly electricity data
       value: 130.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 140.0
     - datetime: '2022-01-01'
       source: Ember, Yearly electricity data
       value: 170.0
