--- a/config/zones/SV.yaml
+++ b/config/zones/SV.yaml
@@ -35,6 +35,9 @@ capacity:
     - datetime: '2018-01-01'
       source: Ember, Yearly electricity data
       value: 580.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 570.0
   solar:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
