--- a/config/zones/TW.yaml
+++ b/config/zones/TW.yaml
@@ -11,6 +11,9 @@ capacity:
     - datetime: '2021-01-01'
       source: Ember, Yearly electricity data
       value: 90.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 80.0
   coal:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
