--- a/config/zones/VC.yaml
+++ b/config/zones/VC.yaml
@@ -14,6 +14,9 @@ capacity:
     - datetime: '2019-01-01'
       source: Ember, Yearly electricity data
       value: 30.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 40.0
     - datetime: '2022-01-01'
       source: Ember, Yearly electricity data
       value: 50.0
