--- a/config/zones/VN.yaml
+++ b/config/zones/VN.yaml
@@ -17,6 +17,9 @@ capacity:
     - datetime: '2021-01-01'
       source: Ember, Yearly electricity data
       value: 370.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 380.0
   coal:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
